forth/test/fail/test_numeric_minus_unsigned.af
\ Must fail to compile.
-0x___
